--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="intro">
 
       <div class="intro-block">
-        <div class="palette" >
+        <div class="palette">
           <div class="palette-text">
             <p class="available">A V A I L A B L E</p>
             <p class="colours">COLOURS</p>
@@ -105,20 +105,20 @@
             <div class="product-img">
               <img class="change-color" src="/img/catalog/product-preview-airdots.png" alt="">
               <div class="buttons">
-<a href="#" class="product-cart">
-  <span class="product-cart_line product-cart_line-top"></span>
-  <span class="product-cart_line product-cart_line-right"></span>
-  <span class="product-cart_line product-cart_line-bottom"></span>
-  <span class="product-cart_line product-cart_line-left"></span>
-  Add to cart
-</a>
-<a href="#" class="product-favorite">
-  <span class="product-favorite_line product-favorite_line-top"></span>
-  <span class="product-favorite_line product-favorite_line-right"></span>
-  <span class="product-favorite_line product-favorite_line-bottom"></span>
-  <span class="product-favorite_line product-favorite_line-left"></span>
-  Favorite
-</a>
+                <a href="#" class="product-cart">
+                  <span class="product-cart_line product-cart_line-top"></span>
+                  <span class="product-cart_line product-cart_line-right"></span>
+                  <span class="product-cart_line product-cart_line-bottom"></span>
+                  <span class="product-cart_line product-cart_line-left"></span>
+                  Add to cart
+                </a>
+                <a href="#" class="product-favorite">
+                  <span class="product-favorite_line product-favorite_line-top"></span>
+                  <span class="product-favorite_line product-favorite_line-right"></span>
+                  <span class="product-favorite_line product-favorite_line-bottom"></span>
+                  <span class="product-favorite_line product-favorite_line-left"></span>
+                  Favorite
+                </a>
               </div>
             </div>
           </div>
@@ -133,7 +133,6 @@
               </ul>
             </div>
           </div>
-          
         </div>
       </div>
 
@@ -143,25 +142,33 @@
   <footer class="footer">
     <div class="payment">
       <h3 class="payment-title">Payment Options:</h3>
-      <div class="payment-slider">
-        <div class="payment-slider-row">
-          <div class="payment-slider_slide">
-            <a href="#"><img class="payment-slider_slide_img" src="img/payment/1.png" alt="payment" /></a>
-          </div>
-          <div class="payment-slider_slide">
-            <a href="#"><img class="payment-slider_slide_img" src="img/payment/2.png" alt="payment" /></a>
-          </div>
-          <div class="payment-slider_slide">
-            <a href="#"><img class="payment-slider_slide_img" src="img/payment/3.png" alt="payment" /></a>
+      <div class="payment-slider_block">
+        <div class="payment-slider-wrapper">
+          <div class="payment-slider">
+            <!-- <div class="payment-slider-row"> -->
+            <div class="payment-slider_slide">
+              <img class="payment-slider_slide_img" src="img/payment/1.png" alt="payment" />
+            </div>
+            <div class="payment-slider_slide">
+              <img class="payment-slider_slide_img" src="img/payment/2.png" alt="payment" />
+            </div>
+            <div class="payment-slider_slide">
+              <img class="payment-slider_slide_img" src="img/payment/3.png" alt="payment" />
+            </div>
+            <!-- </div>
+          <div class="payment-slider-row"> -->
+            <div class="payment-slider_slide">
+              <img class="payment-slider_slide_img" src="img/payment/4.png" alt="payment" />
+            </div>
+            <div class="payment-slider_slide">
+              <img class="payment-slider_slide_img" src="img/payment/5.png" alt="payment" />
+            </div>
+            <!-- </div> -->
           </div>
         </div>
-        <div class="payment-slider-row">
-          <div class="payment-slider_slide">
-            <a href="#"><img class="payment-slider_slide_img" src="img/payment/4.png" alt="payment" /></a>
-          </div>
-          <div class="payment-slider_slide">
-            <a href="#"><img class="payment-slider_slide_img" src="img/payment/5.png" alt="payment" /></a>
-          </div>
+        <div class="payment-slider-arrow">
+          <div class="arrow fas fa-arrow-left" id="payment-arrow-left"></div>
+          <div class="arrow fas fa-arrow-right" id="payment-arrow-right"></div>
         </div>
       </div>
     </div>
@@ -216,7 +223,7 @@
     </div>
     <div class="popup-login-close"></div>
   </div>
-    <!-- Popup favorite -->
+  <!-- Popup favorite -->
   <div class="popup-favorite">
     <h4>Favorite</h4>
     <div class="popup-favorite-block">
@@ -225,7 +232,7 @@
     </div>
     <div class="popup-favorite-close"></div>
   </div>
-    <!-- Popup cart -->
+  <!-- Popup cart -->
   <div class="popup-cart">
     <h4>Cart</h4>
     <div class="popup-cart-block">
