--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
   <div class="popup-favorite">
     <h4>Favorite</h4>
     <div class="popup-favorite-block">
-      <ul class="popup-favorite-list">
-      </ul>
+        <ul class="popup-favorite-list">
+        </ul>
     </div>
     <div class="popup-favorite-close"></div>
   </div>
@@ -247,9 +247,9 @@
     <div class="popup-cart-block">
       <ul class="popup-cart-list">
       </ul>
-      <div class="checkout">
-        <a class="checkout-btn" href="#">Checkout</a>
-      </div>
+    </div>
+    <div class="checkout">
+      <button type="submit" class="checkout-btn" href="#">Payment options</button>
     </div>
     <div class="popup-cart-close"></div>
   </div>
