--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <h2 class="logo-text">Sound<span>Store</span></h2>
       </div>
       <div class="menu">
-        <div class="search">
+        <div class="search active">
           <input class="search-input" type="search" id="search" />
           <label for="search"><img class="search-img" src="img/menu/search.svg" alt="" /></label>
         </div>
-        <nav class="menu-nav" id="menu">
+        <nav class="menu-nav active" id="menu">
           <div class="menu-nav-item cart">
             <a href="#"><img class="menu-nav-img" src="img/menu/cart.svg" alt="cart" />
               <span>Cart</span></a>
@@ -95,7 +95,7 @@
       <div class="intro-block">
         <div class="product animate__animated animate__backInDown">
           <div class="product-info">
-            <span>S e l e c t P r o d u c t i m a g e t o d i s p l a y :</span>
+            <span>Select Product image to display :</span>
             <div class="product-other-item">
             </div>
             <h4 class="product-name">
